--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Dra. Sory | Pediatra - Lactancia y Alimentación Infantil</title>
-    <meta name="description" content="Dra. Sory, pediatra especialista en lactancia materna y alimentación complementaria. Consultas presenciales y online.">
-    <meta name="author" content="Dra. Sory" />
+<html lang="es">
 
-    
-    
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/224a2c9c-2dbe-4828-985f-4cf7b6cac4ac/id-preview-9b2db6f9--0af3777a-02df-4399-8072-17126aa17f99.lovable.app-1771119212272.png">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Dra. Sory | Pediatra - Lactancia y Alimentación Infantil</title>
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="description"
+    content="Dra. Sory, pediatra especialista en lactancia materna y alimentación complementaria. Consultas presenciales y online.">
+  <meta name="author" content="Dra. Sory" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/224a2c9c-2dbe-4828-985f-4cf7b6cac4ac/id-preview-9b2db6f9--0af3777a-02df-4399-8072-17126aa17f99.lovable.app-1771119212272.png">
-    <meta property="og:title" content="Dra. Sory | Pediatra - Lactancia y Alimentación Infantil">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+    rel="stylesheet">
+
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:title" content="Dra. Sory | Pediatra - Lactancia y Alimentación Infantil">
   <meta name="twitter:title" content="Dra. Sory | Pediatra - Lactancia y Alimentación Infantil">
-  <meta property="og:description" content="Dra. Sory, pediatra especialista en lactancia materna y alimentación complementaria. Consultas presenciales y online.">
-  <meta name="twitter:description" content="Dra. Sory, pediatra especialista en lactancia materna y alimentación complementaria. Consultas presenciales y online.">
+  <meta property="og:description"
+    content="Dra. Sory, pediatra especialista en lactancia materna y alimentación complementaria. Consultas presenciales y online.">
+  <meta name="twitter:description"
+    content="Dra. Sory, pediatra especialista en lactancia materna y alimentación complementaria. Consultas presenciales y online.">
 </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
